# webkonf-rust-everywhere

./: .gitignore
frontend-rs/: Makefile  main.js.rs
frontend-rs/src/: lib.rs  main.rs
frontend-rs/static/: index.html
frontend-rs/static/css/: main.css
frontend-rs/static/js/: webplatform.js
frontend/js/: main.js
ruby/: .gems  config.ru  models.rb
rust/: Cargo.toml
rust/src/: main.rs  models.rs
